@@ -1,3 +1,7 @@
+Upcoming:
+- Made the dialer more performant by also putting the access information in the teleportation data so that we don't need to get the matter receiver(s)
+- Fixed inter-dimensional teleportation
+
 1.18-4.0.2:
 - Updates for McJtyLib and fixes
 - Screens render correctly now
